--- a/src/containers/Footer/index.css
+++ b/src/containers/Footer/index.css
@@ -19,6 +19,12 @@
   text-transform: uppercase;
   /* font-weight: bold; */
 }
+@media (max-width: 425px) {
+  .contact-info .location span,
+  .contact-info .email span {
+    text-transform: capitalize;
+  }
+}
 .resume-info {
   gap: 2rem;
   margin-top: 2rem;
@@ -35,7 +41,7 @@
   gap: 2rem;
   color: var(--secondary-color);
 }
-@media (max-width: 425px) {
+@media (max-width: 500px) {
   .resume-info {
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 3rem;
